--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.2",
+    "react-scripts": "5.0.1",
+    "styled-components": "^6.0.0-rc.1"
   },
   "scripts": {
     "start": "react-scripts start",
